
<androidx.coordinatorlayout.widget.CoordinatorLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".feature.library.WriteReviewFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarWriteReview"
            style="@style/Widget.Library.Toolbar"
            android:layout_width="match_parent"
            android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar"
            app:navigationIcon="@drawable/arrow_back_icon"
            app:title="@string/write_review_title"
            app:menu="@menu/menu_search_book"
            tools:title="서평 작성" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/space_l"
            android:paddingBottom="88dp"
            android:clipToPadding="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPhotos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="ifContentScrolls"
                    android:layout_marginTop="@dimen/space_s"
                    android:visibility="gone"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_photo" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnAddPhoto"
                    style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                    app:shapeAppearanceOverlay="@style/Shape.Round12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/review_add_photo"
                    android:visibility="gone"
                    app:icon="@drawable/camera_icon" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etBookTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/book_title_placeholder"
                        android:inputType="textCapSentences"
                        tools:text="Harry Potter" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etAuthor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/book_author_placeholder"
                        android:inputType="textCapSentences"
                        tools:text="J.K.Rowling" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPublisher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPublisher"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/book_publisher_hint"
                        android:inputType="textCapWords"
                        tools:text="민음사"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilIsbn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etIsbn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/book_isbn_hint"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etBody"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top"
                        android:hint="내용"
                        android:inputType="textMultiLine"
                        android:minLines="6"
                        tools:text="avada kedavra" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/save"
            android:layout_marginHorizontal="@dimen/space_l"
            app:backgroundTint="@color/black"
            app:shapeAppearanceOverlay="@style/Shape.Round12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.search.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/search_books"
        app:layout_anchor="@id/toolbarWriteReview">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvBookSearchResults"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:padding="@dimen/space_l"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_book_row" />
    </com.google.android.material.search.SearchView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
